# EV-Sandbox

./: README.md  frames_2026-02-15_12.51.58.gv
.devcontainer/: Dockerfile  devcontainer.json
development/: data_generation.ipynb  lugre_pinn.ipynb  sim.ipynb
docs/: plotjugler_layout_steering.xml
install/: local_setup.sh  setup.sh
install/tv_sim/lib/tv_sim/: controller  driver  plant
install/tv_sim/share/tv_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tv_sim/share/tv_sim/launch/: launch.py
log/: latest_build
src/tv_sim/: setup.cfg  setup.py
src/tv_sim/tv_sim/core/controllers/: drive_intent.py  torque_allocator.py  torque_vectoring.py  wheel_manager.py  wheel_observer.py
src/tv_sim/tv_sim/core/models/: ev_18dof.py
src/tv_sim/tv_sim/core/utils/: config.py
src/tv_sim/tv_sim/nodes/: controller_node.py  plant_node.py
